--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
+        python -m pip install flake8 pytest pytest-cov
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -38,6 +38,15 @@ jobs:
       run: |
         python -m pip install -e .
     - name: Test with pytest
-      working-directory: ./tests
       run: |
-        pytest
+        coverage run -m pytest
+    - name: Get coverage
+      if: ${{ matrix.python-version == '3.10' }}
+      run: |
+        coverage lcov --omit="*/tests/*"
+    - name: Coveralls
+      if: ${{ matrix.python-version == '3.10' }}
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        path-to-lcov: coverage.lcov
