--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -43,10 +43,7 @@ jobs:
         coverage run -m pytest
     - name: Get coverage
       run: |
-        coverage lcov --omit="*/tests/*"
-    - name: Coveralls
+        coverage xml --omit="*/tests/*"
+    - name: Upload coverage reports to Codecov
       if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10' }}
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: coverage.lcov
+      uses: codecov/codecov-action@v3
